--- a/server/modules/rendering/html-image-prefetch/definition.yml
+++ b/server/modules/rendering/html-image-prefetch/definition.yml
@@ -4,5 +4,5 @@ description: Prefetch remotely rendered images (korki/plantuml)
 author: requarks.io
 icon: mdi-cloud-download-outline
 enabledDefault: false
-dependsOn: htmlCore
+dependsOn: html-core
 props: {}
