--- a/server/modules/rendering/markdown-tasklists/definition.yml
+++ b/server/modules/rendering/markdown-tasklists/definition.yml
@@ -4,5 +4,5 @@ description: Parse task lists to checkboxes
 author: requarks.io
 icon: mdi-format-list-checks
 enabledDefault: true
-dependsOn: markdownCore
+dependsOn: markdown-core
 props: {}
