--- a/server/modules/rendering/html-diagram/definition.yml
+++ b/server/modules/rendering/html-diagram/definition.yml
@@ -4,5 +4,5 @@ description: HTML Processing for diagrams (draw.io)
 author: requarks.io
 icon: mdi-chart-multiline
 enabledDefault: true
-dependsOn: htmlCore
+dependsOn: html-core
 props: {}
