--- a/server/modules/rendering/html-mermaid/definition.yml
+++ b/server/modules/rendering/html-mermaid/definition.yml
@@ -4,5 +4,5 @@ description: Generate flowcharts from Mermaid syntax
 author: requarks.io
 icon: mdi-arrow-decision-outline
 enabledDefault: true
-dependsOn: htmlCore
+dependsOn: html-core
 props: {}
