--- a/server/modules/rendering/html-security/definition.yml
+++ b/server/modules/rendering/html-security/definition.yml
@@ -4,7 +4,7 @@ description: Filter and strips potentially dangerous content
 author: requarks.io
 icon: mdi-fire
 enabledDefault: true
-dependsOn: htmlCore
+dependsOn: html-core
 step: post
 order: 99999
 props:
