--- a/server/modules/rendering/html-tabset/definition.yml
+++ b/server/modules/rendering/html-tabset/definition.yml
@@ -4,5 +4,5 @@ description: Transform headers into tabs
 author: requarks.io
 icon: mdi-tab
 enabledDefault: true
-dependsOn: htmlCore
+dependsOn: html-core
 props: {}
