--- a/server/modules/rendering/markdown-kroki/definition.yml
+++ b/server/modules/rendering/markdown-kroki/definition.yml
@@ -4,7 +4,7 @@ description: Kroki Diagrams Parser
 author: rlanyi (based on PlantUML renderer)
 icon: mdi-sitemap
 enabledDefault: false
-dependsOn: markdownCore
+dependsOn: markdown-core
 props:
   server:
     type: String
