--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -137,6 +137,11 @@ jobs:
     repeat: false
     immediate: true
     worker: true
+  sendCommentNotificationEmails:
+    onInit: true
+    schedule: P1D
+    offlineSkip: true
+    repeat: true
 groups:
   defaultPermissions:
     - 'read:pages'
