--- a/server/modules/comments/artalk/code.yml
+++ b/server/modules/comments/artalk/code.yml
@@ -1,14 +1,14 @@
 main: |
-  <div id="Comments"></div>
+  <div id="artalk-container"></div>
 head: |
-  <link href="https://unpkg.com/artalk/dist/Artalk.css" rel="stylesheet">
-  <script src="https://unpkg.com/artalk/dist/Artalk.js"></script>
+  <link href="{{server}}/dist/Artalk.css" rel="stylesheet">
+  <script src="{{server}}/dist/Artalk.js"></script>
 body: |
   <script>
     window.onload = function() {
       new Artalk({
-        el:        '#Comments',
-        pageKey:   '',
+        el:        '#artalk-container',
+        pageKey:   '{{pageId}}',
         pageTitle: '',
         server:    '{{server}}',
         site:      '{{siteName}}',
