feat: edit drawio site url

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -45,6 +45,7 @@ defaults:
     company: ''
     contentLicense: ''
     logoUrl: https://static.requarks.io/logo/wikijs-butterfly.svg
+    drawioBaseUrl: https://embed.diagrams.net/
     pageExtensions:
       - md
       - html
