feat: file manager folders

--- a/ux/package.json
+++ b/ux/package.json
@@ -72,6 +72,7 @@
     "pinia": "2.0.23",
     "pug": "3.0.2",
     "quasar": "2.10.1",
+    "slugify": "1.6.5",
     "socket.io-client": "4.5.3",
     "tippy.js": "6.3.7",
     "uuid": "9.0.0",
