--- a/server/modules/rendering/asciidoc-core/definition.yml
+++ b/server/modules/rendering/asciidoc-core/definition.yml
@@ -6,4 +6,15 @@ input: asciidoc
 output: html
 icon: mdi-sitemap
 enabledDefault: true
-props: {}
+props:
+  safeMode:
+    type: String
+    default: server
+    title: Safe Mode
+    hint: Sets the safe mode to use when parsing content to HTML.
+    order: 1
+    enum:
+      - unsafe
+      - safe
+      - server
+      - secure
