feat: File Manager improvements + system flags

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -71,8 +71,9 @@ defaults:
       authJwtRenewablePeriod: '14d'
       enforceSameOriginReferrerPolicy: true
     flags:
-      ldapdebug: false
-      sqllog: false
+      experimental: false
+      authDebug: false
+      sqlLog: false
     # System defaults
     channel: NEXT
     cors:
