--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "dotize": "0.3.0",
     "elasticsearch6": "npm:@elastic/elasticsearch@6",
     "elasticsearch7": "npm:@elastic/elasticsearch@7",
+    "elasticsearch8": "npm:@elastic/elasticsearch@8",
     "emoji-regex": "9.2.2",
     "eventemitter2": "6.4.9",
     "express": "4.18.2",
