--- a/server/modules/analytics/elasticapm/code.yml
+++ b/server/modules/analytics/elasticapm/code.yml
@@ -8,5 +8,5 @@ head: |
       j.src = 'https://unpkg.com/@elastic/apm-rum/dist/bundles/elastic-apm-rum.umd.min.js'
       j.onload = function() {elasticApm.init(c)}
       t.parentNode.insertBefore(j, t)
-    })(document, 'script', {serviceName: '{{serviceName}}', serverUrl: '{{serverUrl}}', environment: '{{environment}}'})
+    })(document, 'script', {serviceName: '{{serviceName}}', serverUrl: '{{serverUrl}}', environment: '{{environment}}', certificatePath: '{{certificatePath}}'})
   </script>
