docs: replace old port forwarding

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -47,13 +47,9 @@
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or with the host.
-	"forwardPorts": [3000, 3001, 5432, 8000],
+	"forwardPorts": [5432, 8000],
 
   "portsAttributes": {
-    "3000": {
-      "label": "Wiki.js",
-      "onAutoForward": "notify"
-    },
     "5432": {
       "label": "PostgreSQL",
       "onAutoForward": "silent"
