--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-save-exact = true
-save-prefix = ""
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+@letsdeel:registry=https://npm.pkg.github.com
+always-auth=true
