Revert "Init project"
This reverts commit b4f1ccdc605d141f0bddf32ba09bfe0863467147.

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
-@letsdeel:registry=https://npm.pkg.github.com
-always-auth=true
+save-exact = true
+save-prefix = ""
