--- a/dev/examples/docker-compose.yml
+++ b/dev/examples/docker-compose.yml
@@ -13,21 +13,21 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
 
-  wiki:
-    image: requarks/wiki:2
-    depends_on:
-      - db
-    environment:
-      DB_TYPE: postgres
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: wikijs
-      DB_PASS: wikijsrocks
-      DB_NAME: wiki
-    restart: unless-stopped
-    ports:
-      - "80:3000"
-      - "443:3443"
+  # wiki:
+  #   image: requarks/wiki:2
+  #   depends_on:
+  #     - db
+  #   environment:
+  #     DB_TYPE: postgres
+  #     DB_HOST: db
+  #     DB_PORT: 5432
+  #     DB_USER: wikijs
+  #     DB_PASS: wikijsrocks
+  #     DB_NAME: wiki
+  #   restart: unless-stopped
+  #   ports:
+  #     - "80:3000"
+  #     - "443:3443"
 
 volumes:
   db-data:
