--- a/ux/package.json
+++ b/ux/package.json
@@ -11,57 +11,40 @@
     "lint": "eslint --ext .js,.vue ./"
   },
   "dependencies": {
-    "@apollo/client": "3.7.1",
-    "@codemirror/autocomplete": "6.0.2",
-    "@codemirror/basic-setup": "0.20.0",
-    "@codemirror/closebrackets": "0.19.2",
-    "@codemirror/commands": "6.0.1",
-    "@codemirror/comment": "0.19.1",
-    "@codemirror/fold": "0.19.4",
-    "@codemirror/gutter": "0.19.9",
-    "@codemirror/highlight": "0.19.8",
-    "@codemirror/history": "0.19.2",
-    "@codemirror/lang-css": "6.0.0",
-    "@codemirror/lang-html": "6.1.0",
-    "@codemirror/lang-javascript": "6.0.1",
-    "@codemirror/lang-json": "6.0.0",
-    "@codemirror/lang-markdown": "6.0.0",
-    "@codemirror/matchbrackets": "0.19.4",
-    "@codemirror/search": "6.0.0",
-    "@codemirror/state": "6.0.1",
-    "@codemirror/tooltip": "0.19.16",
-    "@codemirror/view": "6.0.2",
-    "@lezer/common": "1.0.1",
-    "@quasar/extras": "1.15.5",
-    "@tiptap/core": "2.0.0-beta.176",
-    "@tiptap/extension-code-block": "2.0.0-beta.37",
-    "@tiptap/extension-code-block-lowlight": "2.0.0-beta.68",
-    "@tiptap/extension-color": "2.0.0-beta.9",
-    "@tiptap/extension-dropcursor": "2.0.0-beta.25",
-    "@tiptap/extension-font-family": "2.0.0-beta.21",
-    "@tiptap/extension-gapcursor": "2.0.0-beta.34",
-    "@tiptap/extension-hard-break": "2.0.0-beta.30",
-    "@tiptap/extension-highlight": "2.0.0-beta.33",
-    "@tiptap/extension-history": "2.0.0-beta.21",
-    "@tiptap/extension-image": "2.0.0-beta.27",
-    "@tiptap/extension-mention": "2.0.0-beta.97",
-    "@tiptap/extension-placeholder": "2.0.0-beta.48",
-    "@tiptap/extension-table": "2.0.0-beta.49",
-    "@tiptap/extension-table-cell": "2.0.0-beta.20",
-    "@tiptap/extension-table-header": "2.0.0-beta.22",
-    "@tiptap/extension-table-row": "2.0.0-beta.19",
-    "@tiptap/extension-task-item": "2.0.0-beta.32",
-    "@tiptap/extension-task-list": "2.0.0-beta.26",
-    "@tiptap/extension-text-align": "2.0.0-beta.29",
-    "@tiptap/extension-text-style": "2.0.0-beta.23",
-    "@tiptap/extension-typography": "2.0.0-beta.20",
-    "@tiptap/starter-kit": "2.0.0-beta.185",
-    "@tiptap/vue-3": "2.0.0-beta.91",
+    "@apollo/client": "3.7.7",
+    "@lezer/common": "1.0.2",
+    "@quasar/extras": "1.15.10",
+    "@tiptap/core": "2.0.0-beta.212",
+    "@tiptap/extension-code-block": "2.0.0-beta.212",
+    "@tiptap/extension-code-block-lowlight": "2.0.0-beta.212",
+    "@tiptap/extension-color": "2.0.0-beta.212",
+    "@tiptap/extension-dropcursor": "2.0.0-beta.212",
+    "@tiptap/extension-font-family": "2.0.0-beta.212",
+    "@tiptap/extension-gapcursor": "2.0.0-beta.212",
+    "@tiptap/extension-hard-break": "2.0.0-beta.212",
+    "@tiptap/extension-highlight": "2.0.0-beta.212",
+    "@tiptap/extension-history": "2.0.0-beta.212",
+    "@tiptap/extension-image": "2.0.0-beta.212",
+    "@tiptap/extension-mention": "2.0.0-beta.212",
+    "@tiptap/extension-placeholder": "2.0.0-beta.212",
+    "@tiptap/extension-table": "2.0.0-beta.212",
+    "@tiptap/extension-table-cell": "2.0.0-beta.212",
+    "@tiptap/extension-table-header": "2.0.0-beta.212",
+    "@tiptap/extension-table-row": "2.0.0-beta.212",
+    "@tiptap/extension-task-item": "2.0.0-beta.212",
+    "@tiptap/extension-task-list": "2.0.0-beta.212",
+    "@tiptap/extension-text-align": "2.0.0-beta.212",
+    "@tiptap/extension-text-style": "2.0.0-beta.212",
+    "@tiptap/extension-typography": "2.0.0-beta.212",
+    "@tiptap/pm": "2.0.0-beta.212",
+    "@tiptap/starter-kit": "2.0.0-beta.212",
+    "@tiptap/vue-3": "2.0.0-beta.212",
     "apollo-upload-client": "17.0.0",
-    "browser-fs-access": "0.31.1",
+    "browser-fs-access": "0.31.2",
     "clipboard": "2.0.11",
-    "codemirror": "6.0.1",
-    "filesize": "10.0.5",
+    "codemirror": "5.65.11",
+    "codemirror-asciidoc": "1.0.4",
+    "filesize": "10.0.6",
     "filesize-parser": "1.5.0",
     "fuse.js": "6.6.2",
     "graphql": "16.6.0",
@@ -69,39 +52,47 @@
     "js-cookie": "3.0.1",
     "jwt-decode": "3.1.2",
     "lodash-es": "4.17.21",
-    "luxon": "3.1.0",
-    "pinia": "2.0.23",
+    "lowlight": "2.8.1",
+    "luxon": "3.2.1",
+    "pinia": "2.0.30",
+    "prosemirror-commands": "1.5.0",
+    "prosemirror-history": "1.3.0",
+    "prosemirror-keymap": "1.2.0",
+    "prosemirror-model": "1.19.0",
+    "prosemirror-schema-list": "1.2.2",
+    "prosemirror-state": "1.4.2",
+    "prosemirror-transform": "1.7.1",
+    "prosemirror-view": "1.30.1",
     "pug": "3.0.2",
-    "quasar": "2.10.1",
+    "quasar": "2.11.5",
     "slugify": "1.6.5",
-    "socket.io-client": "4.5.3",
+    "socket.io-client": "4.5.4",
     "tippy.js": "6.3.7",
     "uuid": "9.0.0",
-    "v-network-graph": "0.6.10",
-    "vue": "3.2.41",
-    "vue-codemirror": "6.1.1",
+    "v-network-graph": "0.8.1",
+    "vue": "3.2.47",
     "vue-i18n": "9.2.2",
     "vue-router": "4.1.6",
     "vue3-otp-input": "0.3.6",
     "vuedraggable": "4.1.0",
-    "xterm": "5.0.0",
+    "xterm": "5.1.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "6.0.3",
-    "@quasar/app-vite": "1.1.3",
-    "@types/lodash": "4.14.188",
-    "@volar/vue-language-plugin-pug": "1.0.9",
+    "@intlify/unplugin-vue-i18n": "0.8.1",
+    "@quasar/app-vite": "1.2.0",
+    "@types/lodash": "4.14.191",
+    "@volar/vue-language-plugin-pug": "1.0.24",
     "browserlist": "latest",
-    "eslint": "8.27.0",
+    "eslint": "8.33.0",
     "eslint-config-standard": "17.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "15.5.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "15.6.1",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "9.7.0"
+    "eslint-plugin-vue": "9.9.0"
   },
   "engines": {
-    "node": "^18 || ^16",
+    "node": "^18",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   },
