--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -110,7 +110,7 @@ extraEnv:
   secrets: []
 #    - secret-name
 #    - another-secret-name
-  configmaps: []
+  configMaps: []
 #    - configmap-name
 #    - another-configmap-name
 
