--- a/dev/helm/templates/deployment.yaml
+++ b/dev/helm/templates/deployment.yaml
@@ -39,9 +39,9 @@ spec:
           image: "{{ .Values.image.repository }}:{{ default "latest" .Values.image.tag }}"
           imagePullPolicy: {{ default "IfNotPresent" .Values.image.imagePullPolicy }}
           env:
-            {{- if .Values.NODE_EXTRA_CA_CERTS }}
+            {{- if .Values.nodeExtraCaCerts }}
             - name: NODE_EXTRA_CA_CERTS
-              value: {{ .Values.NODE_EXTRA_CA_CERTS }}
+              value: {{ .Values.nodeExtraCaCerts }}
             {{- end }}
             - name: DB_TYPE
               value: postgres
