--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -113,8 +113,8 @@ sideload:
   #  - name: HTTPS_PROXY
   #    value: http://my.proxy.com:3128
 
-# Append extra trusted certificates for node process from extra volume
-#NODE_EXTRA_CA_CERTS: "/path/to/certs.pem"
+# Append extra trusted certificates for node process from extra volume via NODE_EXTRA_CA_CERTS variable
+#nodeExtraCaCerts: "/path/to/certs.pem"
 
 ## This will override the postgresql chart values
 # externalPostgresql:
