docker build: add postgres-client and gettext packages

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,7 +10,7 @@ steps:
 - name: docker push branch ${DRONE_COMMIT_BRANCH}
   image: plugins/docker
   settings:
-    repo: liquidinvestigations/liquid-dokuwiki
+    repo: liquidinvestigations/wiki.js
     tags: ${DRONE_COMMIT_BRANCH}
     username:
       from_secret: docker_username
@@ -27,7 +27,7 @@ steps:
 - name: docker push autotag + latest
   image: plugins/docker
   settings:
-    repo: liquidinvestigations/liquid-dokuwiki
+    repo: liquidinvestigations/wiki.js
     auto_tag: true
     username:
       from_secret: docker_username
