Added toggle to append timestamp to uploaded files

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -97,6 +97,7 @@ defaults:
       maxFiles: 10
       scanSVG: true
       forceDownload: true
+      appendTimestampToFilename: false
     flags:
       ldapdebug: false
       sqllog: false
