--- a/package.json
+++ b/package.json
@@ -239,6 +239,7 @@
     "cssnano": "4.1.10",
     "cypress": "5.3.0",
     "d3": "6.2.0",
+    "dotenv-webpack": "8.0.1",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "epic-spinners": "1.1.0",
     "eslint": "7.12.0",
