--- a/package.json
+++ b/package.json
@@ -56,10 +56,11 @@
     "bluebird": "3.7.2",
     "body-parser": "1.20.1",
     "chalk": "4.1.0",
-    "cheerio": "1.0.0-rc.5",
+    "cheerio": "1.0.0-rc.12",
     "chokidar": "3.5.3",
     "chromium-pickle-js": "0.2.0",
     "clean-css": "5.3.2",
+    "cohere-ai": "6.0.0",
     "command-exists": "1.2.9",
     "compression": "1.7.4",
     "connect-session-knex": "2.0.0",
