--- a/ux/package.json
+++ b/ux/package.json
@@ -11,41 +11,42 @@
     "lint": "eslint --ext .js,.vue ./"
   },
   "dependencies": {
-    "@apollo/client": "3.7.7",
+    "@apollo/client": "3.7.11",
     "@lezer/common": "1.0.2",
-    "@quasar/extras": "1.15.10",
-    "@tiptap/core": "2.0.0-beta.212",
-    "@tiptap/extension-code-block": "2.0.0-beta.212",
-    "@tiptap/extension-code-block-lowlight": "2.0.0-beta.212",
-    "@tiptap/extension-color": "2.0.0-beta.212",
-    "@tiptap/extension-dropcursor": "2.0.0-beta.212",
-    "@tiptap/extension-font-family": "2.0.0-beta.212",
-    "@tiptap/extension-gapcursor": "2.0.0-beta.212",
-    "@tiptap/extension-hard-break": "2.0.0-beta.212",
-    "@tiptap/extension-highlight": "2.0.0-beta.212",
-    "@tiptap/extension-history": "2.0.0-beta.212",
-    "@tiptap/extension-image": "2.0.0-beta.212",
-    "@tiptap/extension-mention": "2.0.0-beta.212",
-    "@tiptap/extension-placeholder": "2.0.0-beta.212",
-    "@tiptap/extension-table": "2.0.0-beta.212",
-    "@tiptap/extension-table-cell": "2.0.0-beta.212",
-    "@tiptap/extension-table-header": "2.0.0-beta.212",
-    "@tiptap/extension-table-row": "2.0.0-beta.212",
-    "@tiptap/extension-task-item": "2.0.0-beta.212",
-    "@tiptap/extension-task-list": "2.0.0-beta.212",
-    "@tiptap/extension-text-align": "2.0.0-beta.212",
-    "@tiptap/extension-text-style": "2.0.0-beta.212",
-    "@tiptap/extension-typography": "2.0.0-beta.212",
-    "@tiptap/pm": "2.0.0-beta.212",
-    "@tiptap/starter-kit": "2.0.0-beta.212",
-    "@tiptap/vue-3": "2.0.0-beta.212",
+    "@mdi/font": "7.2.96",
+    "@quasar/extras": "1.16.1",
+    "@tiptap/core": "2.0.1",
+    "@tiptap/extension-code-block": "2.0.1",
+    "@tiptap/extension-code-block-lowlight": "2.0.1",
+    "@tiptap/extension-color": "2.0.1",
+    "@tiptap/extension-dropcursor": "2.0.1",
+    "@tiptap/extension-font-family": "2.0.1",
+    "@tiptap/extension-gapcursor": "2.0.1",
+    "@tiptap/extension-hard-break": "2.0.1",
+    "@tiptap/extension-highlight": "2.0.1",
+    "@tiptap/extension-history": "2.0.1",
+    "@tiptap/extension-image": "2.0.1",
+    "@tiptap/extension-mention": "2.0.1",
+    "@tiptap/extension-placeholder": "2.0.1",
+    "@tiptap/extension-table": "2.0.1",
+    "@tiptap/extension-table-cell": "2.0.1",
+    "@tiptap/extension-table-header": "2.0.1",
+    "@tiptap/extension-table-row": "2.0.1",
+    "@tiptap/extension-task-item": "2.0.1",
+    "@tiptap/extension-task-list": "2.0.1",
+    "@tiptap/extension-text-align": "2.0.1",
+    "@tiptap/extension-text-style": "2.0.1",
+    "@tiptap/extension-typography": "2.0.1",
+    "@tiptap/pm": "2.0.1",
+    "@tiptap/starter-kit": "2.0.1",
+    "@tiptap/vue-3": "2.0.1",
     "apollo-upload-client": "17.0.0",
-    "browser-fs-access": "0.31.2",
+    "browser-fs-access": "0.33.0",
     "clipboard": "2.0.11",
     "codemirror": "5.65.11",
     "codemirror-asciidoc": "1.0.4",
     "dependency-graph": "0.11.0",
-    "filesize": "10.0.6",
+    "filesize": "10.0.7",
     "filesize-parser": "1.5.0",
     "fuse.js": "6.6.2",
     "graphql": "16.6.0",
@@ -54,45 +55,45 @@
     "jwt-decode": "3.1.2",
     "lodash-es": "4.17.21",
     "lowlight": "2.8.1",
-    "luxon": "3.2.1",
-    "pinia": "2.0.30",
-    "prosemirror-commands": "1.5.0",
+    "luxon": "3.3.0",
+    "pinia": "2.0.33",
+    "prosemirror-commands": "1.5.1",
     "prosemirror-history": "1.3.0",
-    "prosemirror-keymap": "1.2.0",
+    "prosemirror-keymap": "1.2.1",
     "prosemirror-model": "1.19.0",
     "prosemirror-schema-list": "1.2.2",
     "prosemirror-state": "1.4.2",
     "prosemirror-transform": "1.7.1",
-    "prosemirror-view": "1.30.1",
+    "prosemirror-view": "1.30.2",
     "pug": "3.0.2",
-    "quasar": "2.11.5",
-    "slugify": "1.6.5",
-    "socket.io-client": "4.5.4",
+    "quasar": "2.11.9",
+    "slugify": "1.6.6",
+    "socket.io-client": "4.6.1",
     "tabulator-tables": "5.4.4",
     "tippy.js": "6.3.7",
     "uuid": "9.0.0",
-    "v-network-graph": "0.8.1",
+    "v-network-graph": "0.9.1",
     "vue": "3.2.47",
     "vue-i18n": "9.2.2",
     "vue-router": "4.1.6",
-    "vue3-otp-input": "0.3.6",
+    "vue3-otp-input": "0.4.1",
     "vuedraggable": "4.1.0",
     "xterm": "5.1.0",
     "zxcvbn": "4.4.2"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "0.8.1",
-    "@quasar/app-vite": "1.2.0",
-    "@types/lodash": "4.14.191",
-    "@volar/vue-language-plugin-pug": "1.0.24",
+    "@intlify/unplugin-vue-i18n": "0.10.0",
+    "@quasar/app-vite": "1.2.1",
+    "@types/lodash": "4.14.192",
+    "@volar/vue-language-plugin-pug": "1.2.0",
     "autoprefixer": "10.4.14",
     "browserlist": "latest",
-    "eslint": "8.33.0",
+    "eslint": "8.37.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-n": "15.6.1",
+    "eslint-plugin-n": "15.7.0",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-vue": "9.9.0"
+    "eslint-plugin-vue": "9.10.0"
   },
   "engines": {
     "node": ">= 18.0",
