--- a/ux/package.json
+++ b/ux/package.json
@@ -53,9 +53,24 @@
     "graphql-tag": "2.12.6",
     "js-cookie": "3.0.1",
     "jwt-decode": "3.1.2",
+    "katex": "0.16.4",
     "lodash-es": "4.17.21",
     "lowlight": "2.8.1",
     "luxon": "3.3.0",
+    "markdown-it": "13.0.1",
+    "markdown-it-abbr": "1.0.4",
+    "markdown-it-attrs": "4.1.6",
+    "markdown-it-decorate": "1.2.2",
+    "markdown-it-emoji": "2.0.2",
+    "markdown-it-expand-tabs": "1.0.13",
+    "markdown-it-footnote": "3.0.3",
+    "markdown-it-imsize": "2.0.1",
+    "markdown-it-mark": "3.0.1",
+    "markdown-it-multimd-table": "4.2.1",
+    "markdown-it-sub": "1.0.0",
+    "markdown-it-sup": "1.0.0",
+    "markdown-it-task-lists": "2.1.1",
+    "pako": "2.1.0",
     "pinia": "2.0.33",
     "prosemirror-commands": "1.5.1",
     "prosemirror-history": "1.3.0",
@@ -71,6 +86,7 @@
     "socket.io-client": "4.6.1",
     "tabulator-tables": "5.4.4",
     "tippy.js": "6.3.7",
+    "twemoji": "14.0.2",
     "uuid": "9.0.0",
     "v-network-graph": "0.9.1",
     "vue": "3.2.47",
