chore: ext path fix + noto-emoji build script

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,3 +14,11 @@ globals:
   navigator: false
   window: false
   WIKI: true
+ignorePatterns:
+  - '**/node_modules/**'
+  - '**/*.min.js'
+  - 'assets/**'
+  - 'coverage/**'
+  - 'repo/**'
+  - 'data/**'
+  - 'logs/**'
