--- a/ux/package.json
+++ b/ux/package.json
@@ -53,6 +53,7 @@
     "fuse.js": "6.6.2",
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
+    "highlight.js": "11.7.0",
     "js-cookie": "3.0.1",
     "jwt-decode": "3.1.2",
     "katex": "0.16.4",
