feat: make user defaults global + add accessible view docs / refresh labels in admin

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -74,6 +74,10 @@ defaults:
       experimental: false
       authDebug: false
       sqlLog: false
+    userDefaults:
+      timezone: 'America/New_York'
+      dateFormat: 'YYYY-MM-DD'
+      timeFormat: '12h'
     # System defaults
     channel: NEXT
     cors:
