--- a/server/modules/analytics/umami/code.yml
+++ b/server/modules/analytics/umami/code.yml
@@ -1,2 +1,2 @@
 head: |
-  <script async defer data-website-id="{{websiteID}}" src="{{url}}/umami.js"></script>
+  <script async src="{{url}}/script.js" data-website-id="{{websiteID}}"></script>
