--- a/server/modules/rendering/security/definition.yml
+++ b/server/modules/rendering/security/definition.yml
@@ -1,10 +1,9 @@
-key: htmlSecurity
 title: Security
 description: Filter and strips potentially dangerous content
 author: requarks.io
 icon: mdi-fire
 enabledDefault: true
-dependsOn: html-core
+dependsOn: core
 step: post
 order: 99999
 props:
