--- a/server/modules/rendering/twemoji/definition.yml
+++ b/server/modules/rendering/twemoji/definition.yml
@@ -1,10 +1,9 @@
-key: htmlTwemoji
 title: Twemoji
 description: Apply Twitter Emojis to all Unicode emojis
 author: requarks.io
 icon: mdi-emoticon-happy-outline
 enabledDefault: true
-dependsOn: html-core
+dependsOn: core
 step: post
 order: 10
 props: {}
