--- a/server/package.json
+++ b/server/package.json
@@ -101,13 +101,14 @@
     "luxon": "3.3.0",
     "markdown-it": "13.0.1",
     "markdown-it-abbr": "1.0.4",
+    "markdown-it-attrs": "4.1.6",
+    "markdown-it-decorate": "1.2.2",
     "markdown-it-emoji": "2.0.2",
     "markdown-it-expand-tabs": "1.0.13",
-    "markdown-it-external-links": "0.0.6",
     "markdown-it-footnote": "3.0.3",
     "markdown-it-imsize": "2.0.1",
     "markdown-it-mark": "3.0.1",
-    "markdown-it-mathjax": "2.0.0",
+    "markdown-it-multimd-table": "4.2.1",
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
@@ -167,6 +168,7 @@
     "striptags": "3.2.0",
     "tar-fs": "2.1.1",
     "turndown": "7.1.2",
+    "twemoji": "14.0.2",
     "uslug": "1.0.4",
     "uuid": "9.0.0",
     "validate.js": "0.13.1",
