--- a/server/modules/rendering/blockquotes/definition.yml
+++ b/server/modules/rendering/blockquotes/definition.yml
@@ -1,8 +1,7 @@
-key: htmlBlockquotes
 title: Blockquotes
 description: Parse blockquotes box styling
 author: requarks.io
 icon: mdi-alpha-t-box-outline
 enabledDefault: true
-dependsOn: html-core
+dependsOn: core
 props: {}
