--- a/server/modules/rendering/codehighlighter/definition.yml
+++ b/server/modules/rendering/codehighlighter/definition.yml
@@ -1,9 +1,8 @@
-key: htmlCodehighlighter
 title: Code Highlighting Post-Processor
 description: Syntax detector for programming code
 author: requarks.io
 icon: mdi-code-braces
 enabledDefault: true
-dependsOn: html-core
+dependsOn: core
 step: pre
 props: {}
