--- a/server/modules/rendering/diagram/definition.yml
+++ b/server/modules/rendering/diagram/definition.yml
@@ -1,8 +1,7 @@
-key: htmlDiagram
 title: Diagrams Post-Processor
 description: HTML Processing for diagrams (draw.io)
 author: requarks.io
 icon: mdi-chart-multiline
 enabledDefault: true
-dependsOn: html-core
+dependsOn: core
 props: {}
