--- a/server/modules/rendering/image-prefetch/definition.yml
+++ b/server/modules/rendering/image-prefetch/definition.yml
@@ -1,8 +1,7 @@
-key: htmlImagePrefetch
 title: Image Prefetch
 description: Prefetch remotely rendered images (korki/plantuml)
 author: requarks.io
 icon: mdi-cloud-download-outline
 enabledDefault: false
-dependsOn: html-core
+dependsOn: core
 props: {}
