--- a/server/modules/rendering/mediaplayers/definition.yml
+++ b/server/modules/rendering/mediaplayers/definition.yml
@@ -1,8 +1,7 @@
-key: htmlMediaplayers
 title: Media Players
 description: Embed players such as Youtube, Vimeo, Soundcloud, etc.
 author: requarks.io
 icon: mdi-video
 enabledDefault: true
-dependsOn: html-core
+dependsOn: core
 props: {}
