--- a/server/modules/rendering/tabset/definition.yml
+++ b/server/modules/rendering/tabset/definition.yml
@@ -1,8 +1,7 @@
-key: htmlTabset
 title: Tabsets
 description: Transform headers into tabs
 author: requarks.io
 icon: mdi-tab
 enabledDefault: true
-dependsOn: html-core
+dependsOn: core
 props: {}
